kubernetes/longhorn/overlays/k3s/traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: longhorn-system
  labels:
    app.kubernetes.io/instance: longhorn
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  labels:
    app.kubernetes.io/instance: longhorn
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`longhorn.k3s.arthurvardevanyan.com`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: https-redirect
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: longhorn
  name: longhorn-https
  namespace: longhorn-system
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`longhorn.k3s.arthurvardevanyan.com`)"
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    domains:
      - main: longhorn.k3s.arthurvardevanyan.com
